[gd_scene load_steps=4 format=3 uid="uid://bwjme2ypkfc1c"]

[ext_resource type="Script" path="res://Prefabs/unitCreator.gd" id="1_44rvg"]
[ext_resource type="Texture2D" uid="uid://tiuj1081vl4n" path="res://icon.svg" id="1_al3t7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ppbtt"]
size = Vector2(129, 130)

[node name="StaticBody2D" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_44rvg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_ppbtt")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_al3t7")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Marker2D"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_al3t7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="."]
offset_left = 78.0
offset_top = -56.0
offset_right = 218.0
offset_bottom = -25.0
disabled = true
text = "Build FootSoldier"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="focus_entered" from="Button" to="." method="_on_button_focus_entered"]
[connection signal="focus_exited" from="Button" to="." method="_on_button_focus_exited"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
